--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
